fix bug overflow scrollbar horizontal sur certaines pages

--- a/src/app/pages/page-biographie/page-biographie.component.scss
+++ b/src/app/pages/page-biographie/page-biographie.component.scss
@@ -12,7 +12,7 @@
 		position: absolute;
 		top:-50%;
 		transform: translate(0, -47%);
-		width: 100vw;
+		width: 100%;
 		text-align: center;
 		font-family: "Halfomania";
 	}
