--- a/src/app/pages/page-choreo/page-choreo.component.scss
+++ b/src/app/pages/page-choreo/page-choreo.component.scss
@@ -8,5 +8,5 @@
 }
 
 app-spotlight-list {
-	width: 100vw;
+	// width: 100%;
 }
