--- a/src/app/pages/page-demarches/page-demarches.component.scss
+++ b/src/app/pages/page-demarches/page-demarches.component.scss
@@ -1,6 +1,6 @@
 #content {
 	position: relative;
-	width: 100vw;
+	width: 100%;
 	height: 100%;
 	#bg-container {
 		z-index: -1;
