--- a/src/app/pages/page-peintures/page-peintures.component.scss
+++ b/src/app/pages/page-peintures/page-peintures.component.scss
@@ -92,10 +92,10 @@
 }
 
 #title-selected {
-	margin: 0 20px;
-	padding: 30px 0;
+	padding: 30px 20px;
 	width: 100%;
 	text-align: center;
 	font-size: 4em;
 	font-family: 'Blackout';
+	box-sizing: border-box;
 }
